--- a/MagazineManagment.BLL/MagazineManagment.BLL.csproj
+++ b/MagazineManagment.BLL/MagazineManagment.BLL.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\MagazineManagment.Shared\MagazineManagment.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
