--- a/MagazineManagment.ClientApplication/MagazineManagment.ClientApplication.csproj
+++ b/MagazineManagment.ClientApplication/MagazineManagment.ClientApplication.csproj
@@ -8,16 +8,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.7" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.7" />
+    <PackageReference Include="System.Net.Http.Formatting.Extension" Version="5.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MagazineManagment.DAL\MagazineManagment.DAL.csproj" />
+    <ProjectReference Include="..\MagazineManagment.Shared\MagazineManagment.Shared.csproj" />
     <ProjectReference Include="..\MagazineManagment\MagazineManagment.Web.csproj" />
   </ItemGroup>
 
