--- a/MagazineManagment.ClientApplication/appsettings.json
+++ b/MagazineManagment.ClientApplication/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ApiCalls": {
+    "GetProducts": "https://localhost:7208/api/",
+    "GetCreateProduct": "https://localhost:7208/api/Category/"
+  },
   "AllowedHosts": "*"
 }
