--- a/MagazineManagmet.ApiCalls/MagazineManagmet.ApiCalls.csproj
+++ b/MagazineManagmet.ApiCalls/MagazineManagmet.ApiCalls.csproj
@@ -7,13 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.9" />
+    <PackageReference Include="System.Net.Http.Formatting.Extension" Version="5.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MagazineManagment.DAL\MagazineManagment.DAL.csproj" />
     <ProjectReference Include="..\MagazineManagment.DTO\MagazineManagment.DTO.csproj" />
-    <ProjectReference Include="..\MagazineManagment.Shared\MagazineManagment.Shared.csproj" />
   </ItemGroup>
 
 </Project>
