Added Post method Client can post a product to database

--- a/MagazineManagment.ClientApplication/appsettings.json
+++ b/MagazineManagment.ClientApplication/appsettings.json
@@ -10,7 +10,8 @@
   },
   "ApiCalls": {
     "GetProducts": "https://localhost:7208/api/",
-    "GetCreateProduct": "https://localhost:7208/api/Category/"
+    "GetCreateProduct": "https://localhost:7208/api/Category/",
+    "PostCreateProduct": "https://localhost:7208/api/Product"
   },
   "AllowedHosts": "*"
 }
