--- a/MagazineManagmet.ApiCalls/MagazineManagmet.ApiCalls.csproj
+++ b/MagazineManagmet.ApiCalls/MagazineManagmet.ApiCalls.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0" />
     <PackageReference Include="System.Net.Http.Formatting.Extension" Version="5.2.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MagazineManagment.BLL\MagazineManagment.BLL.csproj" />
     <ProjectReference Include="..\MagazineManagment.DTO\MagazineManagment.DTO.csproj" />
   </ItemGroup>
 
