Error Message return to client

--- a/MagazineManagment.ClientApplication/appsettings.json
+++ b/MagazineManagment.ClientApplication/appsettings.json
@@ -11,7 +11,7 @@
   "ApiCalls": {
     "GetProducts": "https://localhost:7208/api/",
     "GetCreateProduct": "https://localhost:7208/api/Category/",
-    "PostCreateProduct": "https://localhost:7208/api/Product"
+    "PostCreateProduct": "https://localhost:7208/"
   },
   "AllowedHosts": "*"
 }
