--- a/MagazineManagment.ClientApplication/MagazineManagment.ClientApplication.csproj
+++ b/MagazineManagment.ClientApplication/MagazineManagment.ClientApplication.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MagazineManagment.Shared\MagazineManagment.Shared.csproj" />
     <ProjectReference Include="..\MagazineManagmet.ApiCalls\MagazineManagmet.ApiCalls.csproj" />
   </ItemGroup>
 
