--- a/MagazineManagment.DTO/MagazineManagment.DTO.csproj
+++ b/MagazineManagment.DTO/MagazineManagment.DTO.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MagazineManagment.DAL\MagazineManagment.DAL.csproj" />
+    <ProjectReference Include="..\MagazineManagment.Shared\MagazineManagment.Shared.csproj" />
   </ItemGroup>
 
 </Project>
