Added Edit method plus validation and page exeptions

--- a/MagazineManagment.ClientApplication/appsettings.json
+++ b/MagazineManagment.ClientApplication/appsettings.json
@@ -9,9 +9,11 @@
     }
   },
   "ApiCalls": {
+    "GetProductImage": "https://localhost:7208/api/",
     "GetProducts": "https://localhost:7208/api/",
     "GetCreateProduct": "https://localhost:7208/api/Category/",
-    "PostCreateProduct": "https://localhost:7208/"
+    "PostCreateProduct": "https://localhost:7208/",
+    "PostEditProduct": "https://localhost:7208/"
   },
   "AllowedHosts": "*"
 }
