Category section create / edit

--- a/MagazineManagment.ClientApplication/appsettings.json
+++ b/MagazineManagment.ClientApplication/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-0UILKKD;Database=MagazineManagment;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MagazineManagment;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -13,7 +13,9 @@
     "GetProducts": "https://localhost:7208/api/",
     "GetCreateProduct": "https://localhost:7208/api/Category/",
     "PostCreateProduct": "https://localhost:7208/",
-    "PostEditProduct": "https://localhost:7208/"
+    "PostEditProduct": "https://localhost:7208/",
+    "GetCategories": "https://localhost:7208/api/",
+    "PostCreateCategory": "https://localhost:7208/"
   },
   "AllowedHosts": "*"
 }
