Added Roles with cruds

--- a/MagazineManagment.ClientApplication/appsettings.json
+++ b/MagazineManagment.ClientApplication/appsettings.json
@@ -9,13 +9,11 @@
     }
   },
   "ApiCalls": {
-    "GetProductImage": "https://localhost:7208/api/",
-    "GetProducts": "https://localhost:7208/api/",
-    "GetCreateProduct": "https://localhost:7208/api/Category/",
-    "PostCreateProduct": "https://localhost:7208/",
-    "PostEditProduct": "https://localhost:7208/",
-    "GetCategories": "https://localhost:7208/api/",
-    "PostCreateCategory": "https://localhost:7208/"
+    "ProductGet": "https://localhost:7208/api/",
+    "GetAllCategories": "https://localhost:7208/api/Category/",
+    "ProductPostCreateOrEditDefaultUri": "https://localhost:7208/",
+    "CategoryCreateOrEditDefaultUri": "https://localhost:7208/",
+    "CategoryGetOrDeleteDefaultUri": "https://localhost:7208/api/"
   },
   "AllowedHosts": "*"
 }
