Roles Cruds and role asigment to  users

--- a/MagazineManagment.ClientApplication/appsettings.json
+++ b/MagazineManagment.ClientApplication/appsettings.json
@@ -9,11 +9,16 @@
     }
   },
   "ApiCalls": {
+    // Product Uris
     "ProductGet": "https://localhost:7208/api/",
     "GetAllCategories": "https://localhost:7208/api/Category/",
     "ProductPostCreateOrEditDefaultUri": "https://localhost:7208/",
+    //categories Uris
     "CategoryCreateOrEditDefaultUri": "https://localhost:7208/",
-    "CategoryGetOrDeleteDefaultUri": "https://localhost:7208/api/"
+    "CategoryGetOrDeleteDefaultUri": "https://localhost:7208/api/",
+    //Profile Uris
+    "ProfilePostOrEditRole": "https://localhost:7208/",
+    "ProfileGetOrDeleteProfile": "https://localhost:7208/api/"
   },
   "AllowedHosts": "*"
 }
