Added authorization to each method and seeding data such as : "Admin user & Employee user" and categories.

--- a/MagazineManagment/appsettings.json
+++ b/MagazineManagment/appsettings.json
@@ -8,5 +8,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AdminUser": {
+    "UserName": "admin@MagazineManagment.com",
+    "Password": "Admin1234$"
+  },
+  "EmployeeUser": {
+    "UserName": "employee@MagazineManagment.com",
+    "Password": "Employee1234$"
+  },
   "AllowedHosts": "*"
 }
