Fixed Bugs in data seeding and added a page for admin user to see product changes

--- a/MagazineManagment/appsettings.json
+++ b/MagazineManagment/appsettings.json
@@ -8,13 +8,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AdminUser": {
-    "UserName": "admin@MagazineManagment.com",
-    "Password": "Admin1234$"
-  },
-  "EmployeeUser": {
-    "UserName": "employee@MagazineManagment.com",
-    "Password": "Employee1234$"
-  },
+  "Users": [
+    {
+      "UserName": "admin@MagazineManagment.com",
+      "Password": "Admin1234$"
+    },
+    {
+      "UserName": "employee@MagazineManagment.com",
+      "Password": "Employee1234$"
+    }
+  ],
   "AllowedHosts": "*"
 }
