Added authorization in web api with jwt brear

--- a/MagazineManagment/appsettings.json
+++ b/MagazineManagment/appsettings.json
@@ -18,5 +18,8 @@
       "Password": "Employee1234$"
     }
   ],
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWTConfig": {
+    "Key": "Klevis1234Mema$5678AtisIntershipProject-1"
+  }
 }
