--- a/MagazineManagment.ClientApplication/appsettings.json
+++ b/MagazineManagment.ClientApplication/appsettings.json
@@ -20,5 +20,8 @@
     "ProfilePostOrEditRole": "https://localhost:7208/",
     "ProfileGetOrDeleteProfile": "https://localhost:7208/api/"
   },
+  "JWTConfig": {
+    "Key": "Klevis1234Mema$5678AtisIntershipProject-1"
+  },
   "AllowedHosts": "*"
 }
