profile api calls methods edited  to use generic methods

--- a/MagazineManagment.ClientApplication/appsettings.json
+++ b/MagazineManagment.ClientApplication/appsettings.json
@@ -9,16 +9,9 @@
     }
   },
   "ApiCalls": {
-    // Product Uris
-    "ProductGet": "https://localhost:7208/api/",
     "GetAllCategories": "https://localhost:7208/api/Category/",
-    "ProductPostCreateOrEditDefaultUri": "https://localhost:7208/",
-    //categories Uris
-    "CategoryCreateOrEditDefaultUri": "https://localhost:7208/",
-    "CategoryGetOrDeleteDefaultUri": "https://localhost:7208/api/",
-    //Profile Uris
-    "ProfilePostOrEditRole": "https://localhost:7208/",
-    "ProfileGetOrDeleteProfile": "https://localhost:7208/api/"
+    "GetDeleteDefault": "https://localhost:7208/api/",
+    "CreateEditDefault": "https://localhost:7208/"
   },
   "JWTConfig": {
     "Key": "Klevis1234Mema$5678AtisIntershipProject-1"
