Fixed bugs  related to employees making changes in product quantity Fixed bugs related to user roles

--- a/MagazineManagment/appsettings.json
+++ b/MagazineManagment/appsettings.json
@@ -6,11 +6,24 @@
   "Users": [
     {
       "UserName": "admin@MagazineManagment.com",
-      "Password": "Admin1234$"
+      "Password": "Admin1234$",
+      "Roles": [
+        "Admin"
+      ]
     },
     {
       "UserName": "employee@MagazineManagment.com",
-      "Password": "Employee1234$"
+      "Password": "Employee1234$",
+      "Roles": [
+        "Employee"
+      ]
+    },
+    {
+      "UserName": "employee1@MagazineManagment.com",
+      "Password": "Employee1234$",
+      "Roles": [
+        "Employee"
+      ]
     }
   ],
   "AllowedHosts": "*",
