Added cors configuration

--- a/MagazineManagment/MagazineManagment.Web.csproj
+++ b/MagazineManagment/MagazineManagment.Web.csproj
@@ -8,6 +8,7 @@
     <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'MagazineManagment' " />
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="IdentityServer4" Version="4.1.2" />
